ajouter Utilisateur Controllers

--- a/Projet/appsettings.json
+++ b/Projet/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "db_GL": "Server=(localdb)\\mssqllocaldb;Database=db_GL-dea14b19-a524-44f6-9c6f-bc289d9c603f;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
